# minesweeper

./: .gitignore  CMakeLists.txt
cmake/: DownloadSFML.cmake
include/core/: Board.hpp  Cell.hpp
